// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter-selector Renders \`filter-selector\` with array value 1`] = `
<div
  class="v-input filter-selector v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
  role="combobox"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          <span
            class="v-chip v-chip--small v-chip--removable theme--light"
            tabindex="0"
          >
            <span
              class="v-chip__content"
            >
              Filter 1
              <div
                class="v-chip__close"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  cancel
                </i>
              </div>
            </span>
          </span>
          <input
            aria-label=""
            aria-readonly="false"
            autocomplete="on"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      />
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <div
          class="v-messages__wrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`filter-selector Renders \`filter-selector\` with array value 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <c-enabled-field-stub
        class="mx-3"
        hide-details="hide-details"
        label="Mix filters"
        value="true"
      />
      <hr
        class="mt-3 v-divider theme--light"
      />
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__action"
          >
            <div
              class="v-input v-input--selection-controls v-input--checkbox v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-input--selection-controls__input"
                  >
                    <input
                      aria-checked="true"
                      role="checkbox"
                      type="checkbox"
                      value=""
                    />
                    <div
                      class="v-input--selection-controls__ripple primary--text"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light primary--text"
                    >
                      check_box
                    </i>
                  </div>
                </div>
                <div
                  class="v-messages theme--light"
                >
                  <transition-group-stub
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span>
                Filter 1
              </span>
              <span
                class="v-badge v-badge--overlap"
              >
                <i
                  aria-hidden="true"
                  class="v-icon ml-2 material-icons theme--light primary--text"
                  style="font-size: 16px;"
                >
                  lock
                </i>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__action"
          >
            <div
              class="v-input v-input--selection-controls v-input--checkbox theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-input--selection-controls__input"
                  >
                    <input
                      aria-checked="false"
                      role="checkbox"
                      type="checkbox"
                      value=""
                    />
                    <div
                      class="v-input--selection-controls__ripple"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                    >
                      check_box_outline_blank
                    </i>
                  </div>
                </div>
                <div
                  class="v-messages theme--light"
                >
                  <transition-group-stub
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span>
                Filter 2
              </span>
              <span
                class="v-badge v-badge--overlap"
              >
                <i
                  aria-hidden="true"
                  class="v-icon ml-2 material-icons theme--light"
                  style="font-size: 16px;"
                >
                  lock
                </i>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <hr
        class="v-divider theme--light"
      />
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__action"
          >
            <div
              class="v-input v-input--selection-controls v-input--checkbox theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-input--selection-controls__input"
                  >
                    <input
                      aria-checked="false"
                      role="checkbox"
                      type="checkbox"
                      value=""
                    />
                    <div
                      class="v-input--selection-controls__ripple"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                    >
                      check_box_outline_blank
                    </i>
                  </div>
                </div>
                <div
                  class="v-messages theme--light"
                >
                  <transition-group-stub
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span>
                Locked filter 1
              </span>
              <span
                class="v-badge v-badge--overlap"
              >
                <i
                  aria-hidden="true"
                  class="v-icon ml-2 material-icons theme--light"
                  style="font-size: 16px;"
                >
                  lock
                </i>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__action"
          >
            <div
              class="v-input v-input--selection-controls v-input--checkbox theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-input--selection-controls__input"
                  >
                    <input
                      aria-checked="false"
                      role="checkbox"
                      type="checkbox"
                      value=""
                    />
                    <div
                      class="v-input--selection-controls__ripple"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                    >
                      check_box_outline_blank
                    </i>
                  </div>
                </div>
                <div
                  class="v-messages theme--light"
                >
                  <transition-group-stub
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span>
                Locked filter 2
              </span>
              <span
                class="v-badge v-badge--overlap"
              >
                <i
                  aria-hidden="true"
                  class="v-icon ml-2 material-icons theme--light"
                  style="font-size: 16px;"
                >
                  lock
                </i>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`filter-selector Renders \`filter-selector\` with badges 1`] = `
<div
  class="v-input filter-selector v-text-field v-select theme--light"
  role="combobox"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          <input
            aria-label=""
            aria-readonly="false"
            autocomplete="on"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      />
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <div
          class="v-messages__wrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`filter-selector Renders \`filter-selector\` with badges 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <c-enabled-field-stub
        class="mx-3"
        hide-details="hide-details"
        label="Mix filters"
      />
      <hr
        class="mt-3 v-divider theme--light"
      />
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <!---->
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span>
                Filter 1
              </span>
              <span
                class="v-badge v-badge--overlap"
              >
                <i
                  aria-hidden="true"
                  class="v-icon ml-2 material-icons theme--light"
                  style="font-size: 16px;"
                >
                  lock
                </i>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <!---->
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span>
                Filter 2
              </span>
              <span
                class="v-badge v-badge--overlap"
              >
                <i
                  aria-hidden="true"
                  class="v-icon ml-2 material-icons theme--light"
                  style="font-size: 16px;"
                >
                  lock
                </i>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <hr
        class="v-divider theme--light"
      />
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <!---->
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span>
                Locked filter 1
              </span>
              <span
                class="v-badge v-badge--overlap"
              >
                <i
                  aria-hidden="true"
                  class="v-icon ml-2 material-icons theme--light"
                  style="font-size: 16px;"
                >
                  lock
                </i>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <!---->
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span>
                Locked filter 2
              </span>
              <span
                class="v-badge v-badge--overlap"
              >
                <i
                  aria-hidden="true"
                  class="v-icon ml-2 material-icons theme--light"
                  style="font-size: 16px;"
                >
                  lock
                </i>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`filter-selector Renders \`filter-selector\` with custom props 1`] = `
<div
  class="v-input filter-selector v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
  long="true"
  role="combobox"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <label
          aria-hidden="true"
          class="v-label v-label--active theme--light"
          style="left: 0px; position: absolute;"
        >
          Custom label
        </label>
        <div
          class="v-select__selections"
        >
          <span
            class="v-chip v-chip--small v-chip--removable theme--light"
            tabindex="0"
          >
            <span
              class="v-chip__content"
            >
              Filter 1
              <div
                class="v-chip__close"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  cancel
                </i>
              </div>
            </span>
          </span>
          <input
            aria-label="Custom label"
            aria-readonly="false"
            autocomplete="on"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      />
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <div
          class="v-messages__wrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`filter-selector Renders \`filter-selector\` with custom props 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <c-enabled-field-stub
        class="mx-3"
        hide-details="hide-details"
        label="Mix filters"
      />
      <hr
        class="mt-3 v-divider theme--light"
      />
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <!---->
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span>
                Filter 1
              </span>
              <span
                class="v-badge v-badge--overlap"
              >
                <i
                  aria-hidden="true"
                  class="v-icon ml-2 material-icons theme--light primary--text"
                  style="font-size: 16px;"
                >
                  lock
                </i>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <!---->
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span>
                Filter 2
              </span>
              <span
                class="v-badge v-badge--overlap"
              >
                <i
                  aria-hidden="true"
                  class="v-icon ml-2 material-icons theme--light"
                  style="font-size: 16px;"
                >
                  lock
                </i>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <hr
        class="v-divider theme--light"
      />
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <!---->
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span>
                Locked filter 1
              </span>
              <span
                class="v-badge v-badge--overlap"
              >
                <i
                  aria-hidden="true"
                  class="v-icon ml-2 material-icons theme--light"
                  style="font-size: 16px;"
                >
                  lock
                </i>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <!---->
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span>
                Locked filter 2
              </span>
              <span
                class="v-badge v-badge--overlap"
              >
                <i
                  aria-hidden="true"
                  class="v-icon ml-2 material-icons theme--light"
                  style="font-size: 16px;"
                >
                  lock
                </i>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`filter-selector Renders \`filter-selector\` with custom props 3`] = `
<div
  class="v-input filter-selector v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
  role="combobox"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          <span
            class="v-chip v-chip--small theme--light"
            tabindex="0"
          >
            <span
              class="v-chip__content"
            >
              Filter 1
            </span>
          </span>
          <input
            aria-label=""
            aria-readonly="false"
            autocomplete="on"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      />
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <div
          class="v-messages__wrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`filter-selector Renders \`filter-selector\` with custom props 4`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        class="v-list--disabled"
        disabled="disabled"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--disabled v-list__tile--active theme--light primary--text"
          disabled="disabled"
        >
          <!---->
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span>
                Filter 1
              </span>
              <span
                class="v-badge v-badge--overlap"
              >
                <i
                  aria-hidden="true"
                  class="v-icon ml-2 material-icons theme--light primary--text"
                  style="font-size: 16px;"
                >
                  lock
                </i>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <!---->
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span>
                Filter 2
              </span>
              <span
                class="v-badge v-badge--overlap"
              >
                <i
                  aria-hidden="true"
                  class="v-icon ml-2 material-icons theme--light"
                  style="font-size: 16px;"
                >
                  lock
                </i>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <hr
        class="v-divider theme--light"
      />
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <!---->
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span>
                Locked filter 1
              </span>
              <span
                class="v-badge v-badge--overlap"
              >
                <i
                  aria-hidden="true"
                  class="v-icon ml-2 material-icons theme--light"
                  style="font-size: 16px;"
                >
                  lock
                </i>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <!---->
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title v-list-badge__tile__title"
            >
              <span>
                Locked filter 2
              </span>
              <span
                class="v-badge v-badge--overlap"
              >
                <i
                  aria-hidden="true"
                  class="v-icon ml-2 material-icons theme--light"
                  style="font-size: 16px;"
                >
                  lock
                </i>
                <transition-stub
                  name="fab-transition"
                >
                  <span
                    class="v-badge__badge error"
                    style="display: none;"
                  >
                    <span
                      class="v-tooltip v-tooltip--top"
                    >
                      <transition-stub
                        name="slide-y-reverse-transition"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light white--text"
                      >
                        priority_high
                      </i>
                    </span>
                  </span>
                </transition-stub>
              </span>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`filter-selector Renders \`filter-selector\` with default props 1`] = `
<div
  class="v-input filter-selector v-text-field v-select theme--light"
  role="combobox"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          <input
            aria-label=""
            aria-readonly="false"
            autocomplete="on"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      />
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <div
          class="v-messages__wrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`filter-selector Renders \`filter-selector\` with default props 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <c-enabled-field-stub
        class="mx-3"
        hide-details="hide-details"
        label="Mix filters"
      />
      <hr
        class="mt-3 v-divider theme--light"
      />
      <div
        role="listitem"
      >
        <div
          class="v-list__tile theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              No data available
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
